# floorplan

./: .gitignore  README.md
floorplan/: Cargo.toml  index.html
floorplan/constraints/: Cargo.toml
floorplan/constraints/src/: lib.rs
floorplan/floorplan/: Cargo.toml
floorplan/floorplan/assets/: walls.glb
floorplan/floorplan/src/: diagram.rs  floorplan.rs  interaction.rs  main.rs  preview.rs  ui.rs
floorplan/run_wasm/: Cargo.toml
floorplan/src/: main.rs
floorplan/srcart/: walls.blend  walls.blend1
proto1/: CMakeLists.txt  proto1.cpp
