[package]
name = "floorplan"
version = "0.1.0"
edition = "2021"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
bevy = "0.14"
bevy_egui = "0.29.0"
egui = "0.29.0"
bevy_vello = "0.6.1"
vello = "0.2.1"
rand = "0.8.5"


[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
