
[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
default-run = "floorplan"
members = [ "constraints",
    "floorplan",
    "run_wasm",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_ui",
  "bevy_scene",
  "bevy_gltf",
  "multi_threaded",
  "x11",
  "tonemapping_luts",
  "bevy_gizmos",
] }
constraints = { path = "constraints" }


#[target.wasm32-unknown-unknown]
#runner = "wasm-server-runner"
