[package]
name = "floorplan"
version = "0.1.0"
edition = "2021"

[dependencies]
#bevy = "0.14"
bevy = { workspace = true }

bevy_egui = { version = "0.29.0", default-features = false, features = [ "open_url", "default_fonts", "render"] }


egui = "0.29.0"
bevy_vello = "0.6.1"
vello = "0.2.1"
rand = "0.8.5"
thiserror = "1.0.61"
once_cell = "1.19.0"


[dev-dependencies]
wasm-bindgen-test = "0.3.42"
